--- a/internal/mailer/templates/sales_team_notification.tmpl
+++ b/internal/mailer/templates/sales_team_notification.tmpl
@@ -69,6 +69,7 @@
           <p><b>Nome:</b> {{.Cliente}}</p>
           <p><b>Email:</b> {{.Email}}</p>
           <p><b>Serviço de Interesse:</b> {{.Servico}}</p>
+          <p><b>Mensagem:</b> {{.Mensagem}}</p>
           <p><b>Data/Hora:</b> {{.Data}}</p>
         </div>
 
